@@ -46,6 +46,8 @@ public:
     virtual void setPointSize(float size)=0;
     virtual void setLineWidth(float width)=0;
 
+    void setCurveAngleStep(float angle){mCurveAngleStep = angle;}
+
     virtual void clear()=0;
 
     bool isRoot(){return mRoot;}
@@ -62,6 +64,8 @@ protected:
     unsigned int mGreen;
     unsigned int mBlue;
     unsigned int mAlpha;
+
+    float mCurveAngleStep;
 };
 
 }
